--- a/Statis/MainPage.xaml
+++ b/Statis/MainPage.xaml
@@ -5,7 +5,7 @@
     xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation" 
     xmlns:uriMapper="clr-namespace:System.Windows.Navigation;assembly=System.Windows.Controls.Navigation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    mc:Ignorable="d" d:DesignWidth="640" d:DesignHeight="480">
+    mc:Ignorable="d" d:DesignWidth="640" d:DesignHeight="480" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk">
 
     <Grid x:Name="LayoutRoot" Style="{StaticResource LayoutRootGridStyle}">
 
@@ -51,6 +51,7 @@
             </Border>
 
         </Grid>
+        <sdk:Label Height="48" HorizontalAlignment="Left" Margin="60,87,0,0" Name="label1" VerticalAlignment="Top" Width="322" Content="Esi sveicināts Statis galvenajā lapā!" FontSize="14" FontWeight="Bold" />
     </Grid>
 
 </UserControl>
