--- a/Statis/Views/NewQuestionnaire.xaml
+++ b/Statis/Views/NewQuestionnaire.xaml
@@ -4,10 +4,10 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="300" d:DesignWidth="400">
+    d:DesignHeight="400" d:DesignWidth="700">
     
-    <Grid x:Name="LayoutRoot" Background="White" Height="300" Width="400">
-        <StackPanel Height="248" HorizontalAlignment="Left" Margin="0,52,0,0" Name="stackPanel1" VerticalAlignment="Top" Width="271" AllowDrop="True" ScrollViewer.VerticalScrollBarVisibility="Auto" />
-        <StackPanel Height="300" HorizontalAlignment="Left" Margin="278,0,0,0" Name="stackPanel2" VerticalAlignment="Top" Width="123" ScrollViewer.VerticalScrollBarVisibility="Auto" />
+    <Grid x:Name="LayoutRoot" Background="White">
+        <StackPanel Style="{StaticResource CreationPanelStyle}" Height="262" HorizontalAlignment="Left" Margin="12,126,0,0" Name="stackPanel1" Width="466" />
+        <StackPanel Style="{StaticResource CreationPanelStyle}" Height="376" HorizontalAlignment="Left" Margin="488,12,0,0" Name="stackPanel2" Width="200" />
     </Grid>
 </UserControl>
