--- a/Statis/Views/CreateQuestionnaireView.xaml
+++ b/Statis/Views/CreateQuestionnaireView.xaml
@@ -4,17 +4,17 @@
            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
            mc:Ignorable="d"
-           xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation" xmlns:prism="clr-namespace:Microsoft.Practices.Prism.ViewModel;assembly=Microsoft.Practices.Prism" xmlns:Views="clr-namespace:Statis.Views" xmlns:viewModel="clr-namespace:Statis.ViewModels" Title="Veido jaunas anketas" Height="480" Width="640">
+           xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation" xmlns:prism="clr-namespace:Microsoft.Practices.Prism.ViewModel;assembly=Microsoft.Practices.Prism" xmlns:Views="clr-namespace:Statis.Views" xmlns:viewModel="clr-namespace:Statis.ViewModels" Title="Veido jaunas anketas" Height="480" Width="640" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk">
     
     <navigation:Page.Resources>
         <viewModel:CreateQuestionnaireViewModel x:Key="ViewModel" />
     </navigation:Page.Resources>
 
-    <Grid x:Name="LayoutRoot" DataContext="{Binding Source={StaticResource ViewModel}}">
-        <ItemsControl ItemsSource="{Binding Questions}" VerticalAlignment="Stretch" Height="262" HorizontalAlignment="Left" Margin="12,78,0,140" Width="466">
+    <Grid x:Name="LayoutRoot" DataContext="{Binding Source={StaticResource ViewModel}}" Width="640">
+        <ItemsControl ItemsSource="{Binding Questions}" VerticalAlignment="Stretch" Height="262" HorizontalAlignment="Left" Margin="0,114,0,104" Width="427" BorderThickness="1">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <StackPanel Style="{StaticResource CreationPanelStyle}">
+                    <StackPanel Style="{StaticResource CreationPanelStyle}" >
                     </StackPanel>
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
@@ -31,10 +31,38 @@
             </ItemsControl.ItemTemplate>
 
         </ItemsControl>
-        <StackPanel Style="{StaticResource CreationPanelStyle}" Height="376" HorizontalAlignment="Left" Margin="488,12,0,0" Name="stackPanel2" Width="200"></StackPanel>
-        <TextBox Height="23" HorizontalAlignment="Left" Margin="175,49,0,0" VerticalAlignment="Top" Width="264" Text="{Binding Name, Mode=TwoWay}" />
-        <TextBlock Style="{StaticResource ContentTextStyle}" Height="23" HorizontalAlignment="Left" Margin="32,49,0,0" Text="Questionnaire name:" VerticalAlignment="Top" />
-        <Button Content="Izveidot jaunu anketu" Name="button1" Width="181" FontSize="12" Height="37" HorizontalContentAlignment="Center" Margin="30,8,428,435" />
-        <Button Content="Button" Height="23" HorizontalAlignment="Left" Margin="255,15,0,0" Name="button2" VerticalAlignment="Top" Width="75" Click="button2_Click" />
+        <Border BorderThickness="1">
+        <StackPanel Style="{StaticResource CreationPanelStyle}" Height="354" HorizontalAlignment="Left" Margin="440,22,0,0" Name="stackPanel2" Width="200" Background="#12000000">
+                <TextBlock Name="questionTemplate1" Text="Brīvās atbildes jautājums" Style="{StaticResource QuestionTemplateTextStyle}" Margin="0,10,0,0" />
+                <Button Content="Pievienot" Height="23" Name="button2" Width="75" HorizontalAlignment="Right" Margin="0,0,10,10" />
+                <Rectangle Height="4" Name="rectangle1" Stroke="Black" StrokeThickness="1" Width="190" />
+                <TextBlock Name="questionTemplate2" Style="{StaticResource QuestionTemplateTextStyle}" Text="Jautājums ar atbilžu variantiem (pieļaujama viena atbilde)" Margin="0,10,0,0" />
+                <ComboBox Height="23" Name="comboBox1" Width="74" HorizontalAlignment="Right" Margin="0,0,10,10">
+                    <ComboBoxItem Content="2" />
+                    <ComboBoxItem Content="3" IsSelected="True" />
+                    <ComboBoxItem Content="4" />
+                    <ComboBoxItem Content="5" />
+                    <ComboBoxItem Content="6" />
+                    <ComboBoxItem Content="7" />
+                    <ComboBoxItem Content="8" />
+                    <ComboBoxItem Content="9" />
+                    <ComboBoxItem Content="10" />
+                    <ComboBoxItem Content="11" />
+                    <ComboBoxItem Content="12" />
+                    <ComboBoxItem Content="13" />
+                    <ComboBoxItem Content="14" />
+                    <ComboBoxItem Content="15" />
+                    <ComboBoxItem />
+                </ComboBox>
+                <Button Content="Pievienot" Height="23" Name="button3" Width="75" HorizontalAlignment="Right" Margin="0,0,10,10" />
+                <Rectangle Height="4" Name="rectangle2" Stroke="Black" StrokeThickness="1" Width="190" />
+            </StackPanel>
+        </Border>
+        <TextBox Height="23" HorizontalAlignment="Left" Margin="146,69,0,0" VerticalAlignment="Top" Width="259" Text="{Binding Name, Mode=TwoWay}" />
+        <TextBlock Style="{StaticResource ContentTextStyle}" Height="23" HorizontalAlignment="Left" Margin="3,69,0,0" Text="Anketas nosaukums:" VerticalAlignment="Top" FontWeight="Bold" />
+        <Button Content="Izveidot jaunu anketu" Name="button1" Width="181" FontSize="12" Height="37" HorizontalContentAlignment="Center" Margin="440,382,19,61" />
+        <TextBlock Style="{StaticResource ContentTextStyle}" Height="Auto" HorizontalAlignment="Left" Text="Šeit vari izveidot jaunu anketu - noteikti ieraksti anketas nosaukumu, lai varētu vēlāk to ērti atrast. Pievieno jautājumus no saraksta labajā pusē un aizpildi to veidnes, kas parādīsies anketas panelī." VerticalAlignment="Top" MaxWidth="470" Margin="0,2,0,0" Width="427" />
+        <TextBlock Height="Auto" HorizontalAlignment="Left" Margin="3,98,0,0" Text="Anketas panelis:" VerticalAlignment="Top" />
+        <TextBlock Height="Auto" HorizontalAlignment="Right" Margin="0,3,0,0" Text="Jautājumu veidnes:" VerticalAlignment="Top" />
     </Grid>
 </navigation:Page>
