--- a/Statis/MainPage.xaml
+++ b/Statis/MainPage.xaml
@@ -25,7 +25,7 @@
     <Grid x:Name="LayoutRoot" Style="{StaticResource LayoutRootGridStyle}" >
 
         <Border x:Name="ContentBorder" Style="{StaticResource ContentBorderStyle}" Margin="0,115,0,0" VerticalAlignment="Top">
-            <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto">
+            <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" BorderThickness="0">
             <navigation:Frame x:Name="ContentFrame" Style="{StaticResource ContentFrameStyle}" 
                               Source="/Home" Navigated="ContentFrame_Navigated" NavigationFailed="ContentFrame_NavigationFailed" MinWidth="500" Height="Auto" DataContext="{Binding}" VerticalContentAlignment="Top">
                 <navigation:Frame.UriMapper>
