--- a/Statis/Views/CreateQuestionnaireView.xaml
+++ b/Statis/Views/CreateQuestionnaireView.xaml
@@ -21,10 +21,13 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <prism:DataTemplateSelector HorizontalContentAlignment="Stretch" IsTabStop="False">
+                    <prism:DataTemplateSelector Content="{Binding}" HorizontalContentAlignment="Stretch" IsTabStop="False">
                         <prism:DataTemplateSelector.Resources>
                             <DataTemplate x:Key="TextQuestionViewModel">
-                                <Views:TextQuestionView />
+                                <Views:TextQuestionView DataContext="{Binding}" />
+                            </DataTemplate>
+                            <DataTemplate x:Key="ImgChoiceQuestionViewModel">
+                                <Views:ImgChoiceQuestionView DataContext="{Binding}" />
                             </DataTemplate>
                         </prism:DataTemplateSelector.Resources>
                     </prism:DataTemplateSelector>
@@ -32,11 +35,10 @@
             </ItemsControl.ItemTemplate>
 
         </ItemsControl>
-        <Border>
-            
+                    
         <StackPanel Style="{StaticResource CreationPanelStyle}" Height="Auto" HorizontalAlignment="Right" Margin="440,22,0,0" Name="stackPanel2" Width="250" Background="#FFD4FFFF" Orientation="Vertical" ScrollViewer.VerticalScrollBarVisibility="Auto" MaxHeight="367">
                 <TextBlock Name="questionTemplate1" Text="Brīvās atbildes jautājums" Style="{StaticResource QuestionTemplateTextStyle}" Margin="0,10,0,0" />
-                <Button Content="Pievienot" Height="23" Name="button2" Width="75" HorizontalAlignment="Right" Margin="0,0,10,10" />
+            <Button Content="Pievienot" Height="23" Name="button2" Width="75" HorizontalAlignment="Right" Margin="0,0,10,10" Command="{Binding AddTextQuestion}" />
                 <!--<Rectangle Height="4" Name="rectangle1" Stroke="Black" StrokeThickness="1" Width="227" />
                 
                 <TextBlock Name="questionTemplate2" Style="{StaticResource QuestionTemplateTextStyle}" Text="Jautājums ar atbilžu variantiem (viena atbilde)" Margin="0,10,0,0" />
@@ -120,10 +122,10 @@
                 <Rectangle Height="4" Name="rectangle5" Stroke="Black" StrokeThickness="1" Width="190" />
             -->
             </StackPanel>
-        </Border>
+        
         <TextBox Height="23" HorizontalAlignment="Left" Margin="146,69,0,0" VerticalAlignment="Top" Width="259" Text="{Binding Name, Mode=TwoWay}" />
         <TextBlock Style="{StaticResource ContentTextStyle}" Height="23" HorizontalAlignment="Left" Margin="3,69,0,0" Text="Anketas nosaukums:" VerticalAlignment="Top" FontWeight="Bold" />
-        <Button Content="Izveidot jaunu anketu" Name="button1" FontSize="12" Height="37" HorizontalContentAlignment="Center" Margin="12,400,12,61" HorizontalAlignment="Center" MinWidth="400" />
+        <Button Content="Saglabāt anketu" FontSize="12" Height="37" HorizontalContentAlignment="Center" Margin="12,400,12,61" HorizontalAlignment="Center" MinWidth="400" Command="{Binding SaveQuestionnaire}" />
         <TextBlock Style="{StaticResource ContentTextStyle}" Height="Auto" HorizontalAlignment="Left" Text="Šeit vari izveidot jaunu anketu - noteikti ieraksti anketas nosaukumu, lai varētu vēlāk to ērti atrast. Pievieno jautājumus no saraksta labajā pusē un aizpildi to veidnes, kas parādīsies anketas panelī." VerticalAlignment="Top" MaxWidth="470" Margin="0,2,0,0" Width="427" />
     </Grid>
 </navigation:Page>
