--- a/Statis/Views/TextChoiceView.xaml
+++ b/Statis/Views/TextChoiceView.xaml
@@ -1,17 +1,17 @@
-﻿<UserControl x:Class="Statis.Views.TextQuestionView"
+﻿<UserControl x:Class="Statis.Views.TextChoiceView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="30" d:DesignWidth="300">
+    d:DesignHeight="30" d:DesignWidth="400">
     
     <Grid x:Name="LayoutRoot" Background="White">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Column="0" Text="Jautājums:" VerticalAlignment="Center"></TextBlock>
-        <TextBox Grid.Column="1" Text="{Binding Question, Mode=TwoWay}"></TextBox>
+        <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center" IsEnabled="False"></CheckBox>
+        <TextBox Grid.Column="1" Text="{Binding Text}"></TextBox>
     </Grid>
 </UserControl>
