--- a/Statis/Views/ImgChoiceQuestionView.xaml
+++ b/Statis/Views/ImgChoiceQuestionView.xaml
@@ -15,7 +15,7 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock Grid.Column="0" Text="Jautājums:" VerticalAlignment="Center"></TextBlock>
-        <TextBox Grid.Column="1" Text="{Binding Question}"></TextBox>
+        <TextBox Grid.Column="1" Text="{Binding Question, Mode=TwoWay}"></TextBox>
         <ItemsControl Grid.Column="1" Grid.Row="1" ItemsSource="{Binding Choices}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
