--- a/Statis/Views/TextChoiceView.xaml
+++ b/Statis/Views/TextChoiceView.xaml
@@ -12,6 +12,6 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center" IsEnabled="False"></CheckBox>
-        <TextBox Grid.Column="1" Text="{Binding Text}"></TextBox>
+        <TextBox Grid.Column="1" Text="{Binding Text, Mode=TwoWay}"></TextBox>
     </Grid>
 </UserControl>
