--- a/Statis/Views/TextQuestionView.xaml
+++ b/Statis/Views/TextQuestionView.xaml
@@ -6,12 +6,12 @@
     mc:Ignorable="d"
     d:DesignHeight="30" d:DesignWidth="300">
     
-    <Grid x:Name="LayoutRoot" Background="White">
+    <Grid x:Name="LayoutRoot" Background="White" HorizontalAlignment="Stretch">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Column="0" Text="Jautājums:" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
-        <TextBox Grid.Column="1" Text="{Binding Question, Mode=TwoWay}" HorizontalAlignment="Left"></TextBox>
+        <TextBox Grid.Column="1" Text="{Binding Question, Mode=TwoWay}" HorizontalAlignment="Stretch"></TextBox>
     </Grid>
 </UserControl>
