--- a/Statis/Views/Review.xaml
+++ b/Statis/Views/Review.xaml
@@ -4,27 +4,18 @@
            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
            mc:Ignorable="d"
-           xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation" Title="Skati savas anketas" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" Style="{StaticResource PageStyle}" Height="480" Width="1200">
-    <Grid x:Name="LayoutRoot">
+           xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation" Title="Skati savas anketas" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:viewModel="clr-namespace:Statis.ViewModels" Style="{StaticResource PageStyle}" Height="480" Width="1200">
+    <navigation:Page.Resources>
+        <viewModel:ReviewViewModel x:Key="ViewModel" />
+    </navigation:Page.Resources>
+
+    <Grid x:Name="LayoutRoot" DataContext="{Binding Source={StaticResource ViewModel}}">
         <TextBlock FontSize="12" FontWeight="Bold" Height="Auto" HorizontalAlignment="Left" Margin="12,12,0,0" MaxWidth="200" Name="label1" Text="Tev jau ir šādas anketas:" TextWrapping="Wrap" VerticalAlignment="Top" Width="Auto" />
-        <ComboBox Height="23" HorizontalAlignment="Right" Margin="0,9,662,0" Name="comboBox1" VerticalAlignment="Top" Width="320" AllowDrop="False"></ComboBox>
-        <Button Content="Apskatīt" Height="23" HorizontalAlignment="Left" Margin="224,47,0,0" Name="button1" VerticalAlignment="Top" Width="75" />
-        <Button Content="Likvidēt" Height="23" HorizontalAlignment="Left" Margin="339,47,0,0" Name="button2" VerticalAlignment="Top" Width="75" />
-        <Button Content="Izsūtīt" Height="23" HorizontalAlignment="Left" Margin="454,47,0,0" Name="button3" VerticalAlignment="Top" Width="75" />
-        <ItemsControl Margin="12,80,0,0" HorizontalAlignment="Left" Width="516" MinWidth="500">
-            <ItemsControl.Template>
-                <ControlTemplate>
-                    <Border BorderBrush="#FF0097FC" BorderThickness="4" CornerRadius="15" />
-                </ControlTemplate>
-            </ItemsControl.Template>
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel>
-                        
-                    </StackPanel>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-        </ItemsControl>
+        
+        <ListBox Margin="12,40,671,76" ItemsSource="{Binding MyQuestionnaires}" SelectedValue="{Binding SelectedQuestionnaireName, Mode=TwoWay}" BorderThickness="2" BorderBrush="#FF0097FC">
+
+        </ListBox>
+
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
             <ScrollViewer HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Auto" BorderThickness="0">
                 <ItemsControl HorizontalAlignment="Right" Width="634" Margin="0,0,10,0">
@@ -39,5 +30,9 @@
                 </ItemsControl>
             </ScrollViewer>
         </StackPanel>
+        <HyperlinkButton Content="Labot" NavigateUri="{Binding QuestionnaireViewUri}" Height="23" HorizontalAlignment="Left" Margin="41,425,0,0" Name="hyperlinkButton1" VerticalAlignment="Top" Width="43" />
+        <HyperlinkButton Content="Izsūtīt" Height="23" HorizontalAlignment="Left" Margin="216,425,0,0" Name="hyperlinkButton2" VerticalAlignment="Top" Width="50" />
+        <HyperlinkButton Content="Analizēt" Height="23" HorizontalAlignment="Right" Margin="0,425,990,0" Name="hyperlinkButton3" VerticalAlignment="Top" Width="56" />
+        <HyperlinkButton Content="Likvidēt" Command="{Binding DeleteQuestionnaire}" Height="23" HorizontalAlignment="Left" Margin="90,425,0,0" Name="hyperlinkButton4" VerticalAlignment="Top" Width="58" />
     </Grid>
 </navigation:Page>
