--- a/Statis/Views/QuestionnaireFillingView.xaml
+++ b/Statis/Views/QuestionnaireFillingView.xaml
@@ -1,12 +1,26 @@
-﻿<UserControl x:Class="Statis.Views.QuestionnaireFillingView"
+﻿<Controls:Page x:Class="Statis.Views.QuestionnaireFillingView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:Controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation" xmlns:viewModel="clr-namespace:Statis.ViewModels" mc:Ignorable="d"
     d:DesignHeight="300" d:DesignWidth="400">
-    
-    <Grid x:Name="LayoutRoot" Background="White">
 
+    <Controls:Page.Resources>
+        <!--<viewModel:QuestionnaireFillingViewModel x:Key="ViewModel" />-->
+    </Controls:Page.Resources>
+
+    <Grid x:Name="LayoutRoot" DataContext="{Binding Source={StaticResource ViewModel}}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+            
+        </StackPanel>
+        
+        <StackPanel Grid.Row="2" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+
+        </StackPanel>
     </Grid>
-</UserControl>
+</Controls:Page>
